Fixed the Navbar on top and added necessary spacing

--- a/client/src/styles/nav-bar.css
+++ b/client/src/styles/nav-bar.css
@@ -18,3 +18,7 @@
 .drop-menu-icon {
     margin: 0px 25px 0px 0px;
 }
+
+.nav-spacer {
+    margin-top: 75px;
+}
